samples/_failures_safe/1761504642_1c491f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7059bc8.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_e7059bc8.c:160:13: error: expected declaration or statement at end of input
  160 |             }
      |             ^
./samples/SAFE/__tmp_e7059bc8.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7059bc8.c:160:13: error: expected declaration or statement at end of input
